Avoid Zoom on Mobile Forms

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -19,5 +19,7 @@
 
 	#aaa { display: block; }
 
-	/*.jumbotron {display: none}*/
+	input[type="text"]:focus, input[type="password"], textarea:focus, select:focus {
+	  font-size: 16px;
+	}
 }
